Translate project to English; backend ready before Docker setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
-New-Item -Name .env.example -ItemType File
-notepad .env.example
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+GMAIL_USER=<senin-emailin>
+GMAIL_APP_PW=<gmail-app-password>
 
+HF_TOKEN=<huggingface-token>
+HF_MODEL=cerebras/llama3.1-8b
+
+N8N_HOST=ko-n8n.onrender.com
+N8N_BASIC_AUTH_ACTIVE=true
+N8N_BASIC_AUTH_USER=admin
+N8N_BASIC_AUTH_PASSWORD=strongPass123
+
+SHEET_API=https://script.google.com/macros/s/AKfycbw4K_4zvk-dKSdfo6DgF7EkIAggIoIxm06Se6IBmiWig9lnGYIc6QyzOzDyr-4MKxRISA/exec
+
+TZ=Europe/Istanbul
