--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -2,21 +2,22 @@ name: Keep Render Apps Awake
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
+    - cron: "*/10 * * * *"   # her 10 dakikada bir
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+
     steps:
-      - name: Ping FastAPI /healthz
+      - name: Ping FastAPI /docs (Swagger)
         run: |
-          curl -fsS -m 10 https://email-automation-ko-project.onrender.com/healthz || exit 1
-      - name: Ping FastAPI /docs
+          curl -L --retry 2 --max-time 15 --fail \
+            https://email-automation-ko-project.onrender.com/docs
+
+      - name: Ping n8n (root)
         run: |
-          curl -fsS -m 10 https://email-automation-ko-project.onrender.com/docs || exit 1
-      
-      - name: Ping n8n (editor root)
-        run: |
-          curl -fsS -m 10 https://email-automation-n8n.onrender.com/ || exit 0
+          # n8n bazen 302/401 dönebiliyor; hata kodunu yoksaymak için || true
+          curl -L --retry 2 --max-time 15 \
+            https://email-automation-n8n.onrender.com/ || true
